# hematite

./: .dockerignore  .gitmodules  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml
src/: board.rs  configuration.rs  game.rs  logic.rs  main.rs  server.rs
src/configuration/: engine.rs  mcts.rs  mod.rs  snake.rs
src/engine/: hazards.rs  immediate_survival.rs  longevity.rs  mod.rs  moveset.rs  safety.rs
src/engine/modes/: aggressive.rs  defensive.rs  hungry.rs  mod.rs  scared.rs  searching.rs
src/engine/modes/searching/: mod.rs
src/engine/monte_carlo/: mod.rs  node.rs  simulation.rs  utils.rs
src/engine/monte_carlo/game/: mod.rs  utils.rs
src/engine/rules/: hazard.rs  mod.rs  safety.rs
src/engine/search/: mod.rs
src/engine/search/monte_carlo/: mod.rs  node.rs  simulation.rs
src/engine/simulation/: mod.rs
src/engine/utils/: area.rs  astar.rs  floodfill.rs  heap_item.rs  mod.rs
src/game/: board.rs  coord.rs  mod.rs  moves.rs  point.rs  snake.rs  state.rs
src/objects/: board.rs  mod.rs  moves.rs  point.rs  settings.rs  snake.rs
