[package]
	authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
	description = "A Battlesnake written in Rust"
	edition     = "2021"
	keywords    = ["battlesnake"]
	name        = "hematite"
	readme      = "README.md"
	version     = "0.2.1"

	[package.metadata]
		battlesnake_username = "cogsandsquigs" # My Battlesnake username

		[package.metadata.snake]
			color       = "#0e0d0b"   # The color of Hematite's body
			debug_color = "#ff00ff"   # The color when Hematite is being debugged/in development mode
			head        = "sand-worm" # The head of Hematite
			tail        = "sharp"     # The tail of Hematite

[dependencies]
	cargo_toml = "0.14.0"
	env_logger = "0.9.0"
	itertools  = "0.10.5"
	log        = "0.4.0"
	rand       = { version = "0.8.5", features = ["alloc", "small_rng"] }
	rocket     = { version = "0.5.0-rc.1", features = ["json"] }
	serde      = { version = "1.0.117", features = ["derive"] }
	serde_json = "1.0.59"
	toml       = "0.5.11"
