[package]
	authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
	description = "A Battlesnake written in Rust"
	edition     = "2021"
	keywords    = ["battlesnake"]
	name        = "hematite"
	readme      = "README.md"
	version     = "0.2.1"

	[package.metadata]
		battlesnake_username = "cogsandsquigs" # My Battlesnake username

		[package.metadata.snake]
			color       = "#0e0d0b"   # The color of Hematite's body
			debug_color = "#ff00ff"   # The color when Hematite is being debugged/in development mode
			head        = "sand-worm" # The head of Hematite
			tail        = "sharp"     # The tail of Hematite

[dependencies]
	# Server and logging
	env_logger = "0.9.0"                                         # For logging
	log        = "0.4.0"                                         # For logging
	rocket     = { version = "0.5.0-rc.1", features = ["json"] } # For the web server

	# Serialization and deserialization of json and toml
	cargo_toml = "0.14.0"                                       # For parsing the Cargo.toml file to read the configuration
	serde      = { version = "1.0.117", features = ["derive"] }
	serde_json = "1.0.59"                                       # Parsing JSON
	toml       = "0.5.11"                                       # Parsing TOML

	# Miscellaneous
	itertools = "0.10.5"                                                 # For iterating over collections
	rand      = { version = "0.8.5", features = ["alloc", "small_rng"] }
